tests/error/empty_ptr.gw
#! [contains] EmptyPointerException
var <~int~>Ptr t;
<<< *t >>>;
